[Fix] ref #489 - Misc fixes for redesigned app store
* click on circle trigger app install page
* if juste one screenshot hide the carousel
* fix blurry logo
* hide navbar when image are in full screen
* remove shadows and space on footer
* remove defaultIcon screenshots in app-install page
* catalogue scroll issue fixed
* translations updates
* scroll bar custom
* handle display long description
* page title update
* fix cursor zoom in on images, and add upgrade the description mechanism

--- a/src/main/resources/public/css/pages/app-install.css
+++ b/src/main/resources/public/css/pages/app-install.css
@@ -1,4 +1,5 @@
 .app-install-wrapper {
+    flex-grow: 1;
     padding: 3em 1em 0 1em;
 }
 
@@ -11,8 +12,8 @@
 }
 
 .app-install-wrapper .header-app-install .information-app img {
-    width: 8em;
-    height: 8em;
+    width: 64px;
+    height: 64px;
     align-self: center;
 }
 
@@ -29,13 +30,30 @@
 }
 
 .app-install-wrapper .app-install-description {
-    text-align: justify;
     justify-content: center;
-    padding: 2em 0 2em 0;
+    align-items: center;
+    flex-flow: column wrap;
+    padding: 5% 0 5% 0;
+    text-align: center;
 }
 
-.app-install-wrapper .install-selector{
+.app-install-wrapper .app-install-description p {
+    width: 70%;
+    line-height: 1.8em;
+    font-size: 1.25em;
+}
 
+.app-install-wrapper .app-install-description p.long{
+    text-align: justify !important;
+}
+
+.app-install-wrapper .go-to-long-description{
+    color: var(--black-color);
+    cursor: pointer;
+}
+
+.app-install-wrapper .rate-content{
+    min-width: 8em;
 }
 
 .app-install-wrapper .rate-content img {
@@ -51,11 +69,16 @@
 
 .app-install-carousel .screenshot:hover {
     opacity: 0.7;
-    cursor: pointer;
+    cursor: zoom-in;
 }
 
 .slick-slide {
     padding: 0 1em 0 1em;
+}
+
+.slick-slide img{
+    border: 1px solid var(--primary-color);
+    cursor: zoom-in;
 }
 
 .slick-prev::before,
@@ -109,6 +132,19 @@
 .installed > *{
     margin-bottom: 0.5em;
     margin-left: 0.5em;
+}
+
+
+.unique-screenshot{
+    display: flex;
+    flex:1;
+    justify-content: center;
+    align-items: center;
+}
+
+.unique-screenshot img{
+    border: 1px solid var(--primary-color);
+    cursor: zoom-in;
 }
 
 .dashboard{
